# stepmania-chart-db-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SL-ChartParser.lua  SimplyLove-license.txt  parser.lua  pyproject.toml
.github/workflows/: test.yml
src/sm_db_gen/: db.py  gen.py  reference.py
