[tool.poetry]
name = "stepmania-chart-db-generator"
version = "2.2.0-pre"
description = ""
authors = ["Rafał Florczak <florczak.raf@gmail.com>"]
readme = "README.md"
packages = [{include = "sm_db_gen", from = "src"}]

[tool.poetry.scripts]
sm-db-gen = "sm_db_gen.gen:main"

[tool.poetry.dependencies]
python = "^3.11"
simfile = "^2.1.1"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
pdbp = "^1.5.0"
isort = "^5.13.2"
bandit = "^1.7.10"
pre-commit = "^4.0.0"
pre-commit-hooks = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
